--- a/index.html
+++ b/index.html
@@ -4,6 +4,136 @@
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
   <script>
+
+    var infinityPlaylist = '';
+
+    var audio = new Audio();
+    audio.volume = 0.4;
+    function playStuff(src) {
+      audio.pause();
+      audio.src = src;
+      audio.play();
+    }
+
+    var alreadyClicked = false;
+    function infinityClick(input) {
+       if (!input || (input.length > 50)) {
+        alreadyClicked = true;
+        playStuff(input);
+      } else if (input.length > 30) {
+        alreadyClicked = true;
+        $.ajax({
+          type: 'POST',
+          url: infinityPlaylist + '/tracks?position=0&uris=' + input,
+          headers: {
+            'Authorization' : 'Bearer ' + localStorage.getItem('access_token'),
+            'Accept' : 'application/json'
+          },
+          success: function(response) {
+            updateInfinityPlaylist();
+          }
+        })
+      } else if (alreadyClicked == true) {
+        alreadyClicked = false;
+      } else {
+        $.ajax({
+          url: 'https://api.spotify.com/v1/recommendations?seed_tracks=' + input,
+          headers: {
+            'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+          },
+          success: function(response) {
+            infinitize(response.tracks)
+          }
+        });
+      }
+    }
+
+    function playlistToTracks(playlist) {
+      var tracks = new Array(20);
+      for(var i = 0; i < 20; i++) {
+        tracks[i] = playlist.tracks.items[i].track;
+      }
+      return tracks;
+    }
+
+    var infinityTable;
+    function infinitize(tracks) {
+      audio.pause();
+
+      infinityTable = "<table> \n";
+      for(var i = 0; i < tracks.length; i++){
+        if(i % 2 == 0) {
+          infinityTable += "<tr class='white-row' id='" + tracks[i].id + "'>";
+        } else {
+          infinityTable += "<tr class='black-row' id='" + tracks[i].id + "'>";
+        }
+        infinityTable += "<td class='tbl-play'><span id='" + i + "'>Play</span></td>"
+        infinityTable += "<td class='tbl-add'><span id='" + (i + 100) + "'>Save</span></td>";
+        infinityTable += "<td class='tbl-img'><img src='" + tracks[i].album.images[2].url + "'></img></td>";
+        infinityTable += "<td class='tbl-name'>" + tracks[i].name + "</td>";
+        infinityTable += "<td class='tbl-name'>" + tracks[i].artists[0].name + "</td>";
+        infinityTable += "<td class='tbl-popularity'>" + tracks[i].popularity + "%</td>";
+        infinityTable += "</tr> \n";
+      }
+      infinityTable += "</table>";
+
+      $('#content').html(infinityTable)
+
+      for(var i = 0; i < tracks.length; i++){
+        $('#' + tracks[i].id).click(function(){
+          infinityClick($(this).attr('id'));
+        });
+        $('#' + i).click(function(){
+          if ($(this).html() == 'Play') {
+            infinityClick(tracks[$(this).attr('id')].preview_url);
+            for(var j = 0; j < tracks.length; j++){
+              $('#' + j).html('Play');
+            }
+            $(this).html('Pause');
+          } else {
+            audio.pause();
+            alreadyClicked = true;
+            $(this).html('Play');
+          }
+        });
+        $('#' + (i + 100)).click(function(){
+          infinityClick(tracks[$(this).attr('id') - 100].uri);
+        })
+
+      }
+    }
+
+    function updateInfinityPlaylist(){
+      $.ajax({
+        url: infinityPlaylist,
+        headers: {
+          'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+        },
+        success: function(response) {
+          var infinityPlaylistTable = '<table><tr><th colspan="2">Spotinfinity Pearls</th></tr>';
+          for(var i = 0; i < response.tracks.items.length; i++){
+             infinityPlaylistTable += '<tr><td>' + response.tracks.items[i].track.name + '</td>';
+             infinityPlaylistTable += '<td>' + response.tracks.items[i].track.artists[0].name + '</td></tr>';
+          }
+          infinityPlaylistTable += '</table>';
+
+          $('#playlist-box').html(infinityPlaylistTable);
+        }
+      })
+    }
+
+    function search(query) {
+      $.ajax({
+        url: 'https://api.spotify.com/v1/search?q='+ query + '&type=track',
+        headers: {
+          'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+        },
+        success: function(response) {
+          infinitize(response.tracks.items)
+        }
+      })
+    }
+
     $(function(){
       $.ajax({
         url: 'https://api.spotify.com/v1/me',
@@ -13,7 +143,7 @@
         success: function(response) {
           var userProfileTemplate = Handlebars.compile($('#user-profile-template').html());
           response.display_name = response.display_name.split(' ')[0];
-          $('header').html(userProfileTemplate(response))
+          $('header').html(userProfileTemplate(response)).attr('id', response.id)
           $('#logout-button').click(function(){
             localStorage.clear();
             window.location = 'http://spotinfinity.azurewebsites.net/login.html';
@@ -24,16 +154,96 @@
           window.location = 'http://spotinfinity.azurewebsites.net/login.html';
         }
       });
+
       $.ajax({
-        //url: 'https://api.spotify.com/v1/audio-features/05KfyCEE6otdlT1pp2VIjP',
-        //url: 'https://api.spotify.com/v1/recommendations?seed_tracks=0c6xIDDpzE81m2q797ordA',
-        url: 'https://api.spotify.com/v1/search?q=tania&type=track',
+        url: 'https://api.spotify.com/v1/me/playlists?limit=50',
         headers: {
           'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
         },
-        success: function(response2) {
-          console.log(response2)
+        success: function(response) {
+          var i = 0;
+          while(response.items[i] && response.items[i].name != "Spotinfinity Pearls") { i++; }
+          if(response.items[i]) {
+            infinityPlaylist = response.items[i].href;
+            updateInfinityPlaylist();
+          } else {
+            var url = "https://api.spotify.com/v1/users/" + $('header').attr('id') + "/playlists";
+            $.ajax({
+              type: 'POST',
+              url: url,
+              headers: {
+                'Authorization' : 'Bearer ' + localStorage.getItem('access_token'),
+                'Content-Type' : 'application/json'
+              },
+              data: '{ "name" : "Spotinfinity Pearls", "public" : false, "description" : "Spotinfinity playlist containing all the songs you saved in our app!"}',
+              success: function(response) {
+                alert("We created a new playlist in your account that will hold all the songs you save on Spotinfinity!");
+                infinityPlaylist = response.href;
+              }
+            })
+          }
         }
+      })
+
+      $.ajax({
+        url: 'https://api.spotify.com/v1/me/top/tracks',
+        headers: {
+          'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+        },
+        success: function(response) {
+          infinitize(response.items);
+        }
+      })
+
+      $('#search').on("change", function(){
+        search($(this).context.value);
+      });
+
+      $('#personal-top').click(function(){
+        location.reload();
+      });
+      $('#global-top').click(function(){
+        $.ajax({
+          url: 'https://api.spotify.com/v1/users/spotifycharts/playlists/37i9dQZEVXbMDoHDwVN2tF',
+          headers: {
+            'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+          },
+          success: function(response) {
+            infinitize(playlistToTracks(response));
+          }
+        })
+      })
+      $('#new-tracks').click(function(){
+        $.ajax({
+          url: 'https://api.spotify.com/v1/users/spotify/playlists/37i9dQZEVXbisfQoguJhIW',
+          headers: {
+            'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+          },
+          success: function(response) {
+            infinitize(playlistToTracks(response));
+          }
+        })
+      })
+      $('#recommended').click(function(){
+        $.ajax({
+          url: 'https://api.spotify.com/v1/me/playlists',
+          headers: {
+            'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+          },
+          success: function(response) {
+            var i = 0;
+            while(response.items[i].name != "Discover Weekly") { i++; }
+            $.ajax({
+              url: response.items[i].href,
+              headers: {
+                'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+              },
+              success: function(response) {
+                infinitize(playlistToTracks(response));
+              }
+            })
+          }
+        })
       })
     });
   </script>
@@ -55,178 +265,191 @@
 
     <div id="sidebar">
       <div id="search-box">
-        <form>
-          <input type="text" name="search" placeholder="Search...">
-        </form>
+          <input type="text" name="search" placeholder="Search..." id="search" onsubmit="">
       </div>
 
       <div id="preset-box">
         <ul>
-          <li class="preset-btn">Most listened tracks</li>
-          <li class="preset-btn">Recent saved tracks</li>
+          <li class="preset-btn" id="personal-top">Personal Top</li>
+          <li class="preset-btn" id="global-top">Global Top</li>
 
-          <li class="preset-btn">Global top 20</li>
-          <li class="preset-btn">UK top 20</li>
+          <li class="preset-btn" id="recommended">Recommended</li>
+          <li class="preset-btn" id="new-tracks">New Tracks</li>
         </ul>
       </div>
 
       <div id="playlist-box">
+        <table>
+          <tr>
+            <th colspan="2">Spotinfinity Pearls</th>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+          <tr>
+            <td>Song Name</td>
+            <td>Artist</td>
+          </tr>
+        </table>
       </div>
     </div>
 
     <div id='content'>
-      <table>
-        <tr>
-          <th class="tbl-add"></th>
-          <th class="tbl-name">Name</th>
-          <th class="tbl-artist">Artist</th>
-          <th class="tbl-popularity">Popularity</th>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-
-        <tr>
-          <td class="tbl-add">+</td>
-          <td class="tbl-name">song</td>
-          <td class="tbl-artist">singer</td>
-          <td class="tbl-popularity">very</td>
-        </tr>
-      </table>
+      <p>Something went wrong</p>
     </div>
-
-    <footer id="footer">
-    </footer> <!-- End #footer -->
   </body>
 
   <script id='user-profile-template' type='text/x-handlebars-template'>
