--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
       var state = generateRandomString(16);
       localStorage.setItem(stateKey, state);
 
-      var scope = 'user-read-private user-read-email';
+      var scope = 'user-read-private user-read-email playlist-read-private user-top-read playlist-modify-public playlist-modify-private';
 
       var url = 'https://accounts.spotify.com/authorize';
       url += '?response_type=token';
