--- a/login.html
+++ b/login.html
@@ -13,7 +13,31 @@
       <button id="login-button">Log in with Spotify</button>
       <img id="logo" src="img/spotinfinityLogo.png"><br>
     </div>
-    
+    <!--<footer id="footer">
+      <section id="getInTouch">
+          Get In Touch!<br>
+          <br>
+          info@spotinfinity.co.uk<br>
+          01224642266<br><br>
+          123 Music Mound<br>
+          Aberdeen<br>
+          AB24 4CH
+      </section>
+      <section id="aboutUs">
+        About Us<br>
+        <br>
+        Spotinfinity: a web app which allows you to <br>
+        build a playlist to your Spotify account using<br>
+        recommendations on your favourite music
+      </section>
+      <section id="socialMedia">
+        Find us on social media!<br><br>
+        <a href="https://www.facebook.com">
+        <img src="img/fbLogo.png" width="40px" height="40px"></a>
+        <a href="https://www.twitter.com">
+        <img src="img/twitterLogo.png" width="40px" height="40px"></a>
+      </section>
+    </footer> <!-- End #footer -->    
   </body>
 
   <script>
