--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
         <a href="https://www.twitter.com">
         <img src="img/twitterLogo.png" width="40px" height="40px"></a>
       </section>
-    </footer> <!-- End #footer -->    
+    </footer> -->    
   </body>
 
   <script>
