--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
       <button id="login-button">Log in with Spotify</button>
       <img id="logo" src="img/spotinfinityLogo.png"><br>
     </div>
-    <!--<footer id="footer">
+    <footer id="footer">
       <section id="getInTouch">
           Get In Touch!<br>
           <br>
@@ -37,7 +37,7 @@
         <a href="https://www.twitter.com">
         <img src="img/twitterLogo.png" width="40px" height="40px"></a>
       </section>
-    </footer> -->    
+    </footer>     
   </body>
 
   <script>
