--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1 id="loading">Loading...</h1>
-    <div id="login-page">
+    <div id="login-page" height="200vh">
       <button id="login-button">Log in with Spotify</button>
       <img id="logo" src="img/spotinfinityLogo.png"><br>
     </div>
