--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
   <body>
     <h1 id="loading">Loading...</h1>
     <div id="login-page" height="200vh">
-      <button id="login-button">Log in with Spotify</button>
-      <img id="logo" src="img/spotinfinityLogo.png"><br>
+      <button id="login-button">Log in with Spotify</button><br>
+      <img id="logo" src="img/spotinfinityLogo.png">
     </div>
     <footer id="footer">
       <section id="getInTouch">
