--- a/login.html
+++ b/login.html
@@ -8,13 +8,13 @@
   </head>
 
   <body>
-    <h1 id="loading">Loading...</h1>
-    <div id="login-page" height="200vh">
-      <button id="login-button">Log in with Spotify</button><br>
-      <img id="logo" src="img/spotinfinityLogo.png">
+    <h1 class="loading">Loading...</h1>
+    <div class="login-page" height="200vh">
+      <button class="login-button">Log in with Spotify</button><br>
+      <img class="logo" src="img/spotinfinityLogo.png">
     </div>
-    <footer id="footer">
-      <section id="getInTouch">
+    <footer class="footer">
+      <section class="getInTouch">
           Get In Touch!<br>
           <br>
           info@spotinfinity.co.uk<br>
