--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <h1 id="loading">Loading...</h1>
     <div id="login-page" height="200vh">
       <button id="login-button">Log in with Spotify</button><br>
-      <img id="logo" src="img/spotinfinityLogo.png">
+      <img id="logo" src="img/spotinfinityLogo.png" align="middle">
     </div>
     <footer id="footer">
       <section id="getInTouch">
