--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
             <td>Song Name</td>
             <td>Artist</td>
           </tr>
+          <li class="preset-btn" id="createNewPlalist">Create Playlist</li>
         </table>
       </div>
     </div>
