--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js">console.log(width);</script>
   <script>
 
     var infinityPlaylist = '';
