--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
   <script id='user-profile-template' type='text/x-handlebars-template'>
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
+    <span id='currentSong'>tracks[i].name</span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
