--- a/index.html
+++ b/index.html
@@ -455,7 +455,8 @@
   <script id='user-profile-template' type='text/x-handlebars-template'>
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
-    
+    <button id="preset-btn" class="icon-play">play</button>
+
     <button id='logout-button'>Log out</button>
   </script>
 </html>
