--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
   </body>
 
   <script id='user-profile-template' type='text/x-handlebars-template'>
+    console.log(audio.src);
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
     <button id="preset-btn">Play</button>
     <span id='song'>You're listening to {{audio.src}}</span>
-
     <button id='logout-button'>Log out</button>
   </script>
 </html>
