--- a/index.html
+++ b/index.html
@@ -451,9 +451,16 @@
       <p>Something went wrong</p>
     </div>
   </body>
+  
+  console.log(audio.src);
+  console.log("HI");
+  
+  <script>
+    window.alert("hi");
+    window.alert(audio.src);
+  </script>
 
   <script id='user-profile-template' type='text/x-handlebars-template'>
-    console.log(audio.src);
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
     <button id="preset-btn">Play</button>
