--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         });
         $('#' + i).click(function(){
           if ($(this).html() == 'Play') {
-            window.alert('https://api.spotify.com/v1/tracks/{id}');
+            /*This might work with a little bit of fiddling
+            window.alert('https://api.spotify.com/v1/tracks/{id}');*/
             infinityClick(tracks[$(this).attr('id')].preview_url);
             for(var j = 0; j < tracks.length; j++){
               $('#' + j).html('Play');
