--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
        if (!input || (input.length > 50)) {
         alreadyClicked = true;
         playStuff(input);
+         /**/
+         console.log(input);
+         /**/
       } else if (input.length > 30) {
         alreadyClicked = true;
         $.ajax({
