--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           success: function(response) {
             updateInfinityPlaylist();
             /**/
-         console.log(input);
+         console.log(response);
          /**/
           }
         })
