--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             for(var j = 0; j < tracks.length; j++){
               $('#' + j).html('Play');
               /**/
-                console.log(tracks.name);
+                console.log(tracks[$(this).attr('name')]);
               /**/
             }
             $(this).html('Pause');
