--- a/index.html
+++ b/index.html
@@ -458,11 +458,18 @@
     </div>
   </body>
 
+  
+  <script>
+    var currentSong = 'I have a bike';
+    document.getElementById('lblVehicle').innerHTML = lblBike;
+  </script>
   <script id='user-profile-template' type='text/x-handlebars-template'>
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
     <button id="preset-btn">Play</button>
-    <span id='song'>You're listening to {{currentSong}}</span>
+  </script>
+  <script>
+    <span id='song'>You're listening to {{document.getElementById('currentSong').innerHTML = currentSong}}</span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
