--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <button id="preset-btn">Play</button>
   </script>
   <script id='user-profile-template' type='text/x-handlebars-template'>
-    <span id='song'>"You're listening to" + 'document.getElementById('currentSong').innerHTML = currentSong'</span>
+    <span id='song'>You're listening to + document.getElementById('currentSong').innerHTML = currentSong</span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
