--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     <button id="preset-btn">Play</button>
   
   <!--I do not work-->
-    <span id='song'>You're listening to + document.getElementById('currentSong').innerHTML = currentSong</span>
+    <span id='song'>You're listening to + {{document.getElementById('currentSong').innerHTML = currentSong}}</span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
