--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <span id='user-msg'>Hello, {{display_name}}</span>
     <button id="preset-btn">Play</button>
   
-    <span id='song'>You're listening to 'currentSong'</span>
+    <span id='song'>You're listening to {{currentSong}}</span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
