--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
     <button id="preset-btn">Play</button>
-    <p>You're listening to {{currentSong}}</p>
+    <span id='song'>You're listening to {{currentSong}}</span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
