--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             currentSong = (tracks[$(this).attr('id')].name);
             // I print the currently playing song to the screen
             window.alert(currentSong);
-            "You're listening to {{currentSong}}"
+            window.alert("You're listening to {{currentSong}}")
 
             infinityClick(tracks[$(this).attr('id')].preview_url);
             for(var j = 0; j < tracks.length; j++){
