--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
             //I add the currently playing song to a variable called currentSong
             currentSong = (tracks[$(this).attr('id')].name);
             // I print the currently playing song to the screen
-            window.alert(currentSong);
-            
-            window.alert("You're listening to " + (currentSong));
+            window.alert("You're listening to \t" + (currentSong));
 
             infinityClick(tracks[$(this).attr('id')].preview_url);
             for(var j = 0; j < tracks.length; j++){
