--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             //I add the currently playing song to a variable called currentSong
             currentSong = (tracks[$(this).attr('id')].name);
             console.log(tracks[$(this).attr('id')].artist);
-            currentArtist = (tracks[$(this).attr('id')].artist);
+            currentArtist = (tracks[$(this).attr('id')].artists);
             // I print the currently playing song to the screen
             window.alert("You're listening to '" + (currentSong) + "' by " + (tracks[$(this).attr('id')].artist));
 
