--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             console.log(tracks[$(this).attr('id')].artist);
             currentArtist = (tracks[$(this).attr('id')].artists.name);
             // I print the currently playing song to the screen
-            window.alert("You're listening to '" + (currentSong) + "' by " + (tracks[$(this).attr('id')].artist));
+            window.alert("You're listening to '" + (currentSong) + "' by " + currentArtist);
 
             infinityClick(tracks[$(this).attr('id')].preview_url);
             for(var j = 0; j < tracks.length; j++){
