--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             currentArtist = (tracks[$(this).attr('id')].artists.name);
             // I print the currently playing song to the screen
             window.alert("You're listening to '" + (currentSong) + "' by " + (currentArtist));
-            var newThing("You're listening to '" + (currentSong) + "' by " + (currentArtist));
+            var newThing = ("You're listening to '" + (currentSong) + "' by " + (currentArtist));
             $('#song').append(newThing);
             infinityClick(tracks[$(this).attr('id')].preview_url);
             for(var j = 0; j < tracks.length; j++){
