--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
   <script id='user-profile-template' type='text/x-handlebars-template'>
     <img id='user-img' src='{{images.0.url}}' />
     <span id='user-msg'>Hello, {{display_name}}</span>
-    <span id='song'></span>
+    <span id='song' align='center'></span>
     <button id='logout-button'>Log out</button>
   </script>
 </html>
