--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             //I add the current artist to a variable named currentArtist (or I try)
             currentArtist = (tracks[$(this).attr('id')].artists.name);
             // I print the currently playing song to the header
-            var newThing = ("\tYou're listening to '" + (currentSong) + "' by " + (currentArtist));
+            var newThing = ("You're listening to '" + (currentSong) + "' by " + (currentArtist));
             $('#song').html(newThing);
             '<div style="text-align:center">\n' +
               '<span class="dot" onclick="currentSlide(1)"></span> \n' +
