--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             //I add the currently playing song to a variable called currentSong
             currentSong = (tracks[$(this).attr('id')].name);
             //I add the current artist to a variable named currentArtist (or I try)
-            console.log(tracks[$(this).attr('id')].artists.type);
-            currentArtist = (tracks[$(this).attr('id')].artists.name);
+            console.log(tracks[$(this).attr('id')].artists(name);
+            currentArtist = (tracks[$(this).attr('id')].artists(name));
             // I print the currently playing song to the header
             var newThing = ("You're listening to '" + (currentSong) + "' by " + (currentArtist));
             $('#song').html(newThing);
