--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             currentSong = (tracks[$(this).attr('id')].name);
             //I add the current artist to a variable named currentArtist (or I try)
             currentArtist = (tracks[$(this).attr('id')].artists.name);
-            console.log(tracks[$(this).attr('id')].artists);
+            console.log(tracks[$(this).attr('id')].artists.name);
             window.alert(tracks[$(this).attr('id')].artists);
             currentArtist = (tracks[$(this).attr('id')].artists);
             // I print the currently playing song to the header
